# Blaze-Sudio

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __main__.py  api_keys.py  credits.md  debugunittest.py  demos.py  gamedemo.py  ideas.md  index.html  install.py  main.py  progress.md  pyproject.toml  readme.md  requirements.txt  setup.py  test.py  themePlayground.py  title.py  todo.md  todoSTUFFPLZDOMERNPLZ.md  unittest.py
.github/ISSUE_TEMPLATE/: blank-💭.md  bug-report-🐛.md  feature-request-💡.md
.github/scripts/: notifyDiscord.js
.github/workflows/: LOC.yml  build.yml  github_workflow.yaml  manual.yml  python-publish.yml  tag-action.yml
AIs/: chatgpt.py  signin.py
AIs/base/: __init__.py  base.py
BlazeSudio/: BlazeSudio  Game.py  __init__.py
BlazeSudio/Game/: __init__.py  player.py  sound.py  statics.py  world.py
BlazeSudio/bot/: AIs.py  __init__.py  basebots.py  copilot.py  gpt4real.py  install_tinyllm.py  set_preferences.py  tinyllm.py
BlazeSudio/collisions/: Draw.py  (+13 more)
UIpack/: GUI.py  __init__.py  consts.py
bot/: AIs.py  BetterModel.py  __init__.py  basebots.py  copilot.py  set_preferences.py  tinyllm.py
conversation_parse/: __init__.py  consts.py  conversation_parser.py
demoFiles/: collisionsDemo.py  lorem.txt  themePlayground.py
demogames/: data.json
doc/: character start int.md  character start.md  graphics.md  summary syntax.md
docs/: Installing.md  README.md  SUMMARY.md  devs.md
elementGen/: __init__.py  node_editor.py  node_parser.py  types.py
graphics/: __init__.py  async_handling.py  elements.py  graphics.py  graphics_options.py  graphics_stuff.py  loading.py  options.py  setup.py  stuff.py
keys/: api_keys.py  how_to_get_keys.md
ldtk/: Pyldtk.py  __init__.py  application.py  ldtk.py
overlay/: __init__.py  window.py
test-files/: dat.json  test1.ldtk  world.ldtk
tests/: tests.py
utils/: AIs.py  Pyldtk.py  __init__.py  blank.ldtk  characters.py  chatgpt.py  conversation_parser.py  converse.py  discussions.py  player.py  terrainGen.py  world.py
worldGen/: __init__.py  terrainGen.py  world.py
(+254 files in other folders)
